[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-manifest = "0.17.0"
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
leaky-bucket = "1.1.2"
rand = "0.8.5"
rocket = "0.5.0"
serde = "1.0.216"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
shuttle-rocket = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["uuid", "chrono"] }
tokio = "1.42.0"
toml = "0.8.19"
