[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-manifest = "0.17.0"

jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
leaky-bucket = "1.1.2"
rand = "0.8.5"
rocket = {version = "0.5.0",features = ["json"]}
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.26"
shuttle-rocket = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["uuid", "chrono"] }
tera = "1.20.0"
tokio = "1.42.0"
toml = "0.8.19"
